# uecs

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt
examples/basic/src/: main.cpp
include/uecs/: component.hpp  component_manager.hpp  config.hpp  config.hpp.in  entity.hpp  entity_manager.hpp  event.hpp  event_listener.hpp  event_manager.hpp  event_receiver.hpp  system.hpp  system_manager.hpp  type.hpp  uecs.hpp  unique_container.hpp  util.hpp
src/: component_manager.cpp  entity.cpp  entity_manager.cpp  system_manager.cpp
src/uecs/: component.cpp  entity_manager.cpp  type.cpp
tests/: CMakeLists.txt  test_entity_component_view.cpp  test_entity_create_destroy.cpp  test_entity_ids.cpp  tests.hpp
